--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
 sync_dataset.pkl filter=lfs diff=lfs merge=lfs -text
+outputs filter=lfs diff=lfs merge=lfs -text
+models filter=lfs diff=lfs merge=lfs -text
+files filter=lfs diff=lfs merge=lfs -text
