--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,7 @@ sync_dataset.pkl filter=lfs diff=lfs merge=lfs -text
 outputs filter=lfs diff=lfs merge=lfs -text
 models filter=lfs diff=lfs merge=lfs -text
 files filter=lfs diff=lfs merge=lfs -text
+datasets filter=lfs diff=lfs merge=lfs -text
+datasets.py filter=lfs diff=lfs merge=lfs -text
+util.py filter=lfs diff=lfs merge=lfs -text
+sync_exit_edge_cloud.py filter=lfs diff=lfs merge=lfs -text
