--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@ datasets filter=lfs diff=lfs merge=lfs -text
 datasets.py filter=lfs diff=lfs merge=lfs -text
 util.py filter=lfs diff=lfs merge=lfs -text
 sync_exit_edge_cloud.py filter=lfs diff=lfs merge=lfs -text
+graphs filter=lfs diff=lfs merge=lfs -text
